# SoftwareTesting

triangle/: CMakeLists.txt  CTriangleTypeChecker.cpp  CTriangleTypeChecker.h  tests.cpp
